[gd_scene load_steps=6 format=3 uid="uid://bwttq5x23uvie"]

[ext_resource type="Script" path="res://Scripts/cloud_side.gd" id="1_6jn7o"]
[ext_resource type="Texture2D" uid="uid://d1xioii2eydhh" path="res://Assets/Particles/Cloud.png" id="1_dioq6"]

[sub_resource type="Gradient" id="Gradient_3gsga"]
offsets = PackedFloat32Array(0, 0.376582, 0.841772, 1)
colors = PackedColorArray(0.804743, 0.804743, 0.804743, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.301961)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tel0k"]
gradient = SubResource("Gradient_3gsga")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8hvxl"]
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 8, 1)
angle_min = -5.0
angle_max = 5.0
direction = Vector3(0, 0, 0)
spread = 0.0
initial_velocity_min = 0.1
initial_velocity_max = 0.15
gravity = Vector3(-0.5, 0, 0)
linear_accel_max = 1.0
scale_max = 1.2
color_initial_ramp = SubResource("GradientTexture1D_tel0k")

[node name="cloud_side" type="Node2D"]
script = ExtResource("1_6jn7o")
time_scale = 6

[node name="cloud_generator" type="GPUParticles2D" parent="."]
emitting = false
amount = 300
process_material = SubResource("ParticleProcessMaterial_8hvxl")
texture = ExtResource("1_dioq6")
lifetime = 60.0
visibility_rect = Rect2(-500, -100, 200, 200)

[node name="On_Timer" type="Timer" parent="."]
one_shot = true

[node name="Off_Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="Opening_Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="timeout" from="On_Timer" to="." method="_on_on_timer_timeout"]
[connection signal="timeout" from="Off_Timer" to="." method="_on_off_timer_timeout"]
[connection signal="timeout" from="Opening_Timer" to="." method="_on_opening_timer_timeout"]
